Fix image height on mobile

--- a/themes/blank/assets/style.scss
+++ b/themes/blank/assets/style.scss
@@ -261,7 +261,6 @@ img {
     img {
       width: 100%;
       object-fit: cover;
-      height: 70vh;
       padding-bottom: 15px;
       opacity: 0;
       @media screen and (max-width: $tablet) {
